--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends['creators'] = ['David Crane', 'Marta Kauffman']c"
+    "friends['creators'] = ['David Crane', 'Marta Kauffman']"
    ]
   },
   {
